--- a/client/src/components/styles/LeagueStandings.css
+++ b/client/src/components/styles/LeagueStandings.css
@@ -1,44 +1,14 @@
 .leagueStandingsPage {
     width: 100vw;
-    height: 100vh;
+    height:calc(100vh - 68px);
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-fluid {
     padding: 0;
-}
-
-.navBrand {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40px;
-}
-
-.siteBrand {
-    padding: 0;
-    font-size: 20px;
-}
-
-.logo {
-    width: 40px;
-    transform: rotate(90deg);
-    margin-right: 20px;
-}
-
-.navRight {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-right: 50px;
-}
-
-.profilePicture {
-    border-radius: 50%;
-    border: 1px solid black;
 }
 
 #leagueStandings-background {
