--- a/client/src/components/styles/team.css
+++ b/client/src/components/styles/team.css
@@ -137,7 +137,8 @@
 }
 
 #teamPage-upcomingMatches-section,
-#teamPage-previousMatches-section {
+#teamPage-previousMatches-section,
+#teamPage-ongoingMatches-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -145,15 +146,7 @@
     width: 100%;
 }
 
-#teamPage-upcomingMatches {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-    max-height: 407px;
-}
-
-#teamPage-previousMatches {
+.teamPage-matches {
     display: flex;
     flex-direction: column;
     align-items: center;
